--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#2B3134</color>
     <color name="colorAccent">#B8B8B8</color>
 
-    <color name="black_overlay">#66000000</color>
     <color name="f1f1f1">#F1F1F1</color>
     <color name="green">#85b84f</color>
+    <color name="black">#000000</color>
 
 </resources>
