--- a/app/src/main/res/layout/tower_type_item.xml
+++ b/app/src/main/res/layout/tower_type_item.xml
@@ -16,7 +16,12 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:paddingBottom="16dp"
+            android:paddingEnd="32dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:paddingStart="32dp"
+            android:paddingTop="16dp"
             android:text="@{tower.name}"
             android:textColor="@color/black"
             android:textSize="@dimen/normal_text_size" />
