--- a/app/src/main/res/layout/tower_part_fragment.xml
+++ b/app/src/main/res/layout/tower_part_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -18,8 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
-            android:scrollbars="none"
-            app:layoutManager="LinearLayoutManager" />
+            android:scrollbars="none" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
