--- a/app/src/main/res/layout/tower_part_activity.xml
+++ b/app/src/main/res/layout/tower_part_activity.xml
@@ -14,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="@color/colorPrimary"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:titleTextColor="@color/white" />
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
