--- a/app/src/main/res/menu/menu_tower_part_activity.xml
+++ b/app/src/main/res/menu/menu_tower_part_activity.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/filter"
         android:icon="@drawable/ic_filter_list_white_24dp"
         android:title="@string/filter"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom" />
+
 </menu>
