--- a/app/src/main/res/layout/activity_initialization.xml
+++ b/app/src/main/res/layout/activity_initialization.xml
@@ -16,7 +16,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/f1f1f1"
+        android:background="@color/fafafa"
         android:orientation="vertical">
 
 
@@ -54,7 +54,6 @@
             android:text="@string/ok"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1" />
