--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="@color/colorPrimary"
+        android:elevation="@dimen/elevation_tool_bar"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
     <android.support.v4.view.ViewPager
