--- a/app/src/main/res/layout/tower_part_activity.xml
+++ b/app/src/main/res/layout/tower_part_activity.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="@color/colorPrimary"
+            android:elevation="@dimen/elevation_tool_bar"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
         <LinearLayout
