--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@color/colorPrimary"
     tools:context="com.xerofox.fileviewer.ui.SplashActivity">
 
     <TextView
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/app_name"
-        android:textColor="#33b5e5"
+        android:textColor="@color/white"
         android:textSize="50sp"
         android:textStyle="bold" />
 
