--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -11,23 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/tool_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/colorPrimary"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_margin="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tool_bar">
+            app:layout_constraintTop_toTopOf="parent">
 
             <EditText
                 android:id="@+id/input"
@@ -36,6 +27,8 @@
                 android:hint="@string/input_ip"
                 android:imeOptions="actionSearch"
                 android:inputType="textNoSuggestions"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
                 tools:text="google" />
         </android.support.design.widget.TextInputLayout>
 
