--- a/app/src/main/res/layout/tower_part_item.xml
+++ b/app/src/main/res/layout/tower_part_item.xml
@@ -15,46 +15,41 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/seg_str"
-            android:layout_width="48dp"
+            android:id="@+id/part_no"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{String.valueOf(part.segStr)}"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/part_no"
-            android:layout_width="48dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@{part.partNo}"
+            android:gravity="center"
+            android:minWidth="120dp"
+            android:text="@{@string/place_holder_string_string(part.towerTypeName,part.partNo)}"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/material_mark"
-            android:layout_width="48dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:minWidth="48dp"
             android:text="@{part.materialMark}"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/specification"
-            android:layout_width="48dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:minWidth="48dp"
             android:text="@{part.specification}"
             android:textSize="16sp" />
 
@@ -66,6 +61,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             android:text="@{part.getManuString()}"
             android:textSize="16sp" />
 
