--- a/app/src/main/res/layout/tower_part_activity.xml
+++ b/app/src/main/res/layout/tower_part_activity.xml
@@ -17,70 +17,82 @@
             android:elevation="@dimen/elevation_tool_bar"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-        <LinearLayout
+        <com.xero.dropdownmenu.DropDownMenu
+            android:id="@+id/drop_menu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackground"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/seg_str"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:minWidth="120dp"
-                android:text="@string/tower_type_part_no"
-                android:textSize="16sp" />
+            <LinearLayout
+                android:id="@+id/layout_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/material_mark"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/material"
-                android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/specification"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/specification"
-                android:textSize="16sp" />
+                    <TextView
+                        android:id="@+id/seg_str"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:minWidth="120dp"
+                        android:text="@string/tower_type_part_no"
+                        android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/manu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/manu"
-                android:textSize="16sp" />
+                    <TextView
+                        android:id="@+id/material_mark"
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:text="@string/material"
+                        android:textSize="16sp" />
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/specification"
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:text="@string/specification"
+                        android:textSize="16sp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            android:scrollbars="none"
-            app:layoutManager="@string/linear_layout_manager" />
+                    <TextView
+                        android:id="@+id/manu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:text="@string/manu"
+                        android:textSize="16sp" />
 
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:overScrollMode="never"
+                    android:scrollbars="none"
+                    app:layoutManager="@string/linear_layout_manager" />
+            </LinearLayout>
+        </com.xero.dropdownmenu.DropDownMenu>
     </LinearLayout>
 </layout>
