--- a/app/src/main/res/menu/menu_tower_part_activity.xml
+++ b/app/src/main/res/menu/menu_tower_part_activity.xml
@@ -13,6 +13,7 @@
         android:id="@+id/filter"
         android:icon="@drawable/ic_filter_list_white_24dp"
         android:title="@string/filter"
+        android:visible="false"
         app:showAsAction="ifRoom" />
 
 </menu>
