--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,14 +9,20 @@
             type="com.xerofox.fileviewer.vo.Task" />
     </data>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="@dimen/elevation_card"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:paddingBottom="16dp"
             android:paddingEnd="32dp"
             android:paddingLeft="32dp"
@@ -25,5 +32,5 @@
             android:text="@{task.name}"
             android:textSize="@dimen/normal_text_size" />
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
