--- a/app/src/main/res/layout/function_fragment.xml
+++ b/app/src/main/res/layout/function_fragment.xml
@@ -52,7 +52,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="@string/look_over_file"
+                        android:text="@string/look_over_task"
                         android:textSize="16sp" />
 
                 </LinearLayout>
