--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -4,6 +4,8 @@
 
     <data>
 
+        <import type="com.xerofox.fileviewer.util.Util" />
+
         <variable
             name="task"
             type="com.xerofox.fileviewer.vo.Task" />
@@ -18,19 +20,51 @@
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="16dp"
-            android:paddingEnd="32dp"
-            android:paddingLeft="32dp"
-            android:paddingRight="32dp"
-            android:paddingStart="32dp"
-            android:paddingTop="16dp"
-            android:text="@{task.name}"
-            android:textSize="@dimen/normal_text_size" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/task_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="32dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:paddingStart="32dp"
+                android:paddingTop="16dp"
+                android:text="@{String.valueOf(task.id)}"
+                android:textSize="@dimen/normal_text_size" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="16dp"
+                android:paddingEnd="32dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:paddingStart="32dp"
+                android:paddingTop="16dp"
+                android:text="@{task.name}"
+                android:textSize="@dimen/normal_text_size" />
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="32dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:paddingStart="32dp"
+                android:paddingTop="16dp"
+                android:text="@{Util.formatTimeStamp(task.date.getTime())}"
+                android:textSize="@dimen/normal_text_size" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </layout>
