--- a/app/src/main/res/layout/filter_dialog_fragment.xml
+++ b/app/src/main/res/layout/filter_dialog_fragment.xml
@@ -75,6 +75,7 @@
             tools:layout_editor_absoluteY="101dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/seg_str"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_seg_str"
