--- a/app/src/main/res/layout/tower_part_item.xml
+++ b/app/src/main/res/layout/tower_part_item.xml
@@ -62,5 +62,46 @@
             android:text="@{part.getManuString()}"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/material"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape_rectangle"
+            android:gravity="center"
+            android:text="@{part.materialMark}"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape_rectangle"
+            android:gravity="center"
+            android:text="@{part.num}"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tower_part"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape_rectangle"
+            android:gravity="center"
+            android:text="@{part.towerTypeName}"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/state"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape_rectangle"
+            android:gravity="center"
+            android:text="@{part.notes}"
+            android:textSize="16sp" />
+
+
     </LinearLayout>
 </layout>
