--- a/app/src/main/res/layout/tower_part_item.xml
+++ b/app/src/main/res/layout/tower_part_item.xml
@@ -79,7 +79,7 @@
             android:layout_weight="1"
             android:background="@drawable/shape_rectangle"
             android:gravity="center"
-            android:text="@{part.num}"
+            android:text="@{String.valueOf(part.num)}"
             android:textSize="16sp" />
 
         <TextView
