--- a/app/src/main/res/layout/tower_part_item.xml
+++ b/app/src/main/res/layout/tower_part_item.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@{@string/place_holder_string_string(part.towerTypeCode , part.partNo)}"
+                android:text="@{String.valueOf(part.partNo)}"
                 android:textSize="16sp" />
         </LinearLayout>
 
